--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <button class="modal-btn" type="button">Заказать услугу</button>
       </section>
 <!---функции-->
-      <section class="about">
+      <section class="about-function">
         <div class="about-right-side">
           <ul class="about-list">
             <li class="about-list-item">
@@ -91,9 +91,7 @@
             </li>
           </ul>
         </div>
-      </section>
     <!---чем ми занимаемся-->
-      <section class="hero">
         <div class="hero-left-side">
           <h2 class="title-hero">Чем мы занимаемся</h2>
 
