--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     <!---Основная информация-->
     <main>
       <!--кнопки-->
-      <section class="about">
+      <section class="about-portfolio">
         <div class="about-box">
           <ul class="about-box-list">
             <li class="about-box-list-item">
